--- a/index.html
+++ b/index.html
@@ -4,10 +4,29 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <title>CCF</title>
+    <style>
+      *{-webkit-user-select:none;-moz-user-select:none;-ms-user-select:none;user-select:none;}
+      body {
+        /* cursor: none; */
+      }
+      .sight-bead {
+        display: block;
+        width: 100px;
+        height: 100px;
+        position: fixed;
+        left: 50%;
+        top: 50%;
+        transform: translateX(-50%) translateY(-50%);
+      }
+    </style>
   </head>
   <body>
     <div id="app"></div>
+    <img class="sight-bead" onclick="" src="/images/sightBead.png" alt="">
     <script type="module" src="/src/main.ts"></script>
+    <script>
+      
+    </script>
   </body>
 </html>
